<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    android:visibility="visible"
    tools:visibility="visible">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detail_neighbour_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_return"
            app:layout_constraintStart_toStartOf="@+id/detail_neighbour_image"
            app:layout_constraintTop_toTopOf="@id/detail_neighbour_image" />

        <TextView
            android:id="@+id/neighbour_name_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:text="Caroline"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_neighbour_image"
            app:layout_constraintStart_toStartOf="@id/detail_neighbour_image" />

        <android.support.v7.widget.CardView

            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_neighbour_image">


            <TextView
                android:id="@+id/neighbour_name_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Caroline"
                android:textSize="25sp"
                android:textColor="#202122" />

            <ImageView
                android:id="@+id/location"
                android:src="@drawable/ic_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saint pierre du mont à 5 km"
                android:layout_marginStart="56dp"
                android:layout_marginTop="100dp" />

            <ImageView
                android:id="@+id/phone_number"
                android:src="@drawable/ic_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="150dp" />

            <TextView
                android:id="@+id/phone_number_text"
                android:text="+33 6 86 57 90 14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="150dp" />

            <ImageView
                android:id="@+id/adress"
                android:src="@drawable/ic_adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="200dp" />


            <TextView
                android:id="@+id/adress_text"
                android:text="facebook.fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="200dp" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView">

            <TextView
                android:id="@+id/about_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A propos de moi"
                android:textColor="#202122"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/neighbour_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Descriptif de l'utilisateur"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"/>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_button"
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:backgroundTint="@color/colorLightGrey"
        app:layout_anchor="@id/detail_neighbour_image"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintTop_toBottomOf="@id/detail_neighbour_image"/>


</android.support.design.widget.CoordinatorLayout>